fixed form not fitting to grid in portrait

--- a/todo-app-react/src/Components/App.css
+++ b/todo-app-react/src/Components/App.css
@@ -7,7 +7,7 @@
 
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 5em 20em auto;
+  grid-template-rows: 5em fit-content(30%) auto;
 
   font-family: Arial, Helvetica, sans-serif;
   color: var(--theme-foreground-text);
